[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/sounds.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/place_tile_1.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/place_tile_7.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/place_tile_2.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/place_tile_4.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/place_tile_3.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/place_tile_5.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/place_tile_6.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/explosion_3.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/explosion_4.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/explosion_2.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/explosion_6.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/explosion_7.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/explosion_5.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/explosion_1.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/player_died.ogg" type="AudioStream" id=16]

[node name="sounds" type="Node2D"]
script = ExtResource( 1 )

[node name="place_sound_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="place_sound_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="place_sound_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="place_sound_4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="place_sound_5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="place_sound_6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="place_sound_7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="explosion_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="explosion_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="explosion_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="explosion_4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="explosion_5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="explosion_6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="explosion_7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="player_died" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
